Bevel Tool / Vertex Only : width/depth value is wrong. #64107

Closed
opened 2019-05-03 14:26:30 +02:00 by brochard · 11 comments

System Information
Operating system: Kubuntu 19.04
Graphics card: GeForce GTX 660 NVIDIA 430.09

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-04-30 22:49, hash: 480a09a92f

Hi,

Thank you to resolve #63759, now here is the sequel.
In edit mode, Bevel Tool -> Vertex Only : when I enter a width value, it is wrong on the plane or the cube with the width/depth type (see images below).
It's OK with the offset type.
In addition, on the vertex's bevel of a cube, it's more difficult because I don't know where is the right width or the good depth, it's easier on a edge.
You can see we find the same wrong values on the plane and the cube.

  • plane:

plane_width-value2.png

  • cube:

cube_width-value3.png

**System Information** Operating system: Kubuntu 19.04 Graphics card: GeForce GTX 660 NVIDIA 430.09 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-04-30 22:49, hash: `480a09a92f` Hi, Thank you to resolve #63759, now here is the sequel. In edit mode, Bevel Tool -> Vertex Only : when I enter a width value, it is wrong on the plane or the cube with the width/depth type (see images below). It's OK with the offset type. In addition, on the vertex's bevel of a cube, it's more difficult because I don't know where is the right width or the good depth, it's easier on a edge. You can see we find the same wrong values on the plane and the cube. - plane: ![plane_width-value2.png](https://archive.blender.org/developer/F7003296/plane_width-value2.png) - cube: ![cube_width-value3.png](https://archive.blender.org/developer/F7003298/cube_width-value3.png)
Author

Added subscriber: @brochignac

Added subscriber: @brochignac

Added subscribers: @Gvgeo-1, @ZedDB

Added subscribers: @Gvgeo-1, @ZedDB
Howard Trickey was assigned by Sebastian Parborg 2019-05-06 14:40:25 +02:00

@Gvgeo-1 do you want to take a look at this too?

@Gvgeo-1 do you want to take a look at this too?
Howard Trickey was unassigned by George Vogiatzis 2019-05-06 17:04:09 +02:00
George Vogiatzis self-assigned this 2019-05-06 17:04:09 +02:00

Added subscriber: @howardt

Added subscriber: @howardt

Of course, it is my mistake.

I had exactly this problem at some point.
I thought I solve it. I did measure the cube A LOT.
But at some point managed to break it?
I don't remember now, what it was. But will try to find it again.

Of course, it is my mistake. I had exactly this problem at some point. I thought I solve it. I did measure the cube A LOT. But at some point managed to break it? I don't remember now, what it was. But will try to find it again.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
brochard reopened this issue 2019-05-09 12:05:55 +02:00
Author

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-08 22:27, hash: e2d04229c3

Hi,
Very good job, Offset and Depth work fine.
But I'm sorry, I still have a error with the Widht Type.
width-type1.png

**Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-08 22:27, hash: `e2d04229c3` Hi, Very good job, Offset and Depth work fine. But I'm sorry, I still have a error with the Widht Type. ![width-type1.png](https://archive.blender.org/developer/F7020484/width-type1.png)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

My bad, I saw you didn't guess the cryptic way of calculating width.
But till I find and fix the problem, I forgot to explain.
I'm not sure, what the last shape is. So I used your first one. Easier to point out.
cube_width-value4.png
The center axis(used by depth) is calculated from the edges, and not the vertex normal(sometimes gives problems).

Not a perfect solution, but works.
It is too difficult to calculate the width, the way you expected.

I'm closing the bug. But if you find that the value is wrong, feel free to open it again.
If your need, clearer picture. I 'll be able to make a blend file later.
And thanks for not leaving it. It could easily be wrong for a long time, before some notice it.

My bad, I saw you didn't guess the cryptic way of calculating width. But till I find and fix the problem, I forgot to explain. I'm not sure, what the last shape is. So I used your first one. Easier to point out. ![cube_width-value4.png](https://archive.blender.org/developer/F7020815/cube_width-value4.png) The center axis(used by depth) is calculated from the edges, and not the vertex normal(sometimes gives problems). Not a perfect solution, but works. It is too difficult to calculate the width, the way you expected. I'm closing the bug. But if you find that the value is wrong, feel free to open it again. If your need, clearer picture. I 'll be able to make a blend file later. And thanks for not leaving it. It could easily be wrong for a long time, before some notice it.
Author

OK, I understand your calculation, even if I do not completely agree with it: I understand it is difficult to calculate and I'm not a developer ;-).
The Widht value is equal to the diameter of a circle whose center is the orthocenter of the triangle formed by the edges.
It will have to be explained in the documentation.
width-type2.png
And if we increase the number of segments, it changes the whole topology of the corner. It's getting harder and harder to find a good bevel value.

It's really not easy for a bevel on a Vertex Only.

OK, I understand your calculation, even if I do not completely agree with it: I understand it is difficult to calculate and I'm not a developer ;-). The Widht value is equal to the diameter of a circle whose center is the orthocenter of the triangle formed by the edges. It will have to be explained in the documentation. ![width-type2.png](https://archive.blender.org/developer/F7021036/width-type2.png) And if we increase the number of segments, it changes the whole topology of the corner. It's getting harder and harder to find a good bevel value. It's really not easy for a bevel on a Vertex Only.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64107
No description provided.