Fix Bevel T64107 - width/depth value wrong for vertex only.

Code fix from George Vogiatzis (Gvgeo), via D4811.
Needed to initalize vert_axis.